--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -62,8 +62,20 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
+        pip install pytest pytest-cov
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test with pytest
-      run: pytest
+        
+    - name: Run pytest and generate reports
+      run: |
+       pytest \
+        --junitxml=reports/test-results.xml \
+        --cov=. \
+        --cov-report=xml:reports/coverage.xml \
+        --cov-report=html:reports/coverage_html
+
+    - name: Upload Test Reports
+      uses: actions/upload-artifact@v4
+      with:
+       name: test-reports
+       path: reports/
 
