--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,12 +28,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
+        pip install pytest pytest-cov requests
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        
-    - name: Install requests
-      run: pip install requests
-
-
+      
   lint:
     name: Lint Code
     runs-on: ubuntu-latest
