--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
          python -m pip install --upgrade pip
+         pip install requests
          pip install pytest pytest-cov requests
          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       
