--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,16 +20,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
+        
     - name: Install dependencies
       run: |
          python -m pip install --upgrade pip
-         pip install requests
-         pip install pytest pytest-cov requests
-         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+         pip install -r requirements.txt 
       
   lint:
     name: Lint Code
@@ -38,12 +38,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
-    - name: Install flake8
+        
+    - name: Install link dependencies
       run: pip install flake8
+      
     - name: Lint with flake8
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
@@ -56,15 +59,16 @@ jobs:
    
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
         
     - name: Run pytest and generate reports
       run: |
