--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -56,7 +56,7 @@ jobs:
 
 
   test:
-    name: Run Pytest
+    name: Test with Pytest
     runs-on: ubuntu-latest
     needs: lint   # stage dependency
 
@@ -75,5 +75,5 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Run pytest
-      run: pytest
+      run: |
         pytest
