--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -46,6 +46,12 @@ jobs:
       with:
         python-version: "3.10"
 
+    - name: Install dependencies
+      run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
     - name: Install flake8
       run: pip install flake8
 
@@ -72,6 +78,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest pytest-cov requests
+        pip install selenium pytest pytest-cov requests
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Run pytest
