--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,6 +50,9 @@ jobs:
       run: |
           python -m pip install --upgrade pip
           pip install flake8
+          pip install pytest selenium webdriver-manager
+          pip install playwright pytest-playwright
+          python -m playwright install
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Install flake8
